oxiplate/tests/broken/unknown-group.stderr
error[E0599]: no variant or associated item named `textt` found for enum `HtmlEscaper` in the current scope
 --> tests/broken/unknown-group.rs:4:64
  |
4 | #[oxiplate_inline(html: "{% for message in &messages %}\n<p>{{ textt: message }}</p>{% endfor %}\n")]
  |                                                                ^^^^^ variant or associated item not found in `HtmlEscaper`
  |
help: there is a variant with a similar name
  |
4 - #[oxiplate_inline(html: "{% for message in &messages %}\n<p>{{ textt: message }}</p>{% endfor %}\n")]
4 + #[oxiplate_inline(html: "{% for message in &messages %}\n<p>{{ text: message }}</p>{% endfor %}\n")]
  |
